--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ __pycache__/
 
 # Ignore Node modules (if applicable)
 node_modules/
+**/node_modules/
 .next/
 
 # Ignore virtual environments (if using one)
