work on bounded polygon

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "networkx (>=3.4.2,<4.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "numpy (>=2.2.3,<3.0.0)",
-    "scipy (>=1.15.2,<2.0.0)"
+    "scipy (>=1.15.2,<2.0.0)",
+    "shapely (>=2.0.7,<3.0.0)"
 ]
 
 
