--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "numpy (>=2.2.3,<3.0.0)",
     "scipy (>=1.15.2,<2.0.0)",
     "shapely (>=2.0.7,<3.0.0)",
-    "gmplot (>=1.4.1,<2.0.0)"
+    "gmplot (>=1.4.1,<2.0.0)",
+    "folium (>=0.19.4,<0.20.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
