--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "shapely (>=2.0.7,<3.0.0)",
     "gmplot (>=1.4.1,<2.0.0)",
     "folium (>=0.19.4,<0.20.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "pygeodesic (>=0.1.11,<0.2.0)",
+    "geopy (>=2.4.1,<3.0.0)"
 ]
 
 
