--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "folium (>=0.19.4,<0.20.0)",
     "requests (>=2.32.3,<3.0.0)",
     "pygeodesic (>=0.1.11,<0.2.0)",
-    "geopy (>=2.4.1,<3.0.0)"
+    "geopy (>=2.4.1,<3.0.0)",
+    "joblib (>=1.4.2,<2.0.0)",
+    "scikit-learn (>=1.6.1,<2.0.0)"
 ]
 
 
