--- a/app/railway.toml
+++ b/app/railway.toml
@@ -1,11 +1,10 @@
-$schema = "https://railway.com/railway.schema.json"
+"$schema" = "https://railway.com/railway.schema.json"
 
 [build]
 builder = "NIXPACKS"
 buildCommand = "npm install && npm run build"
 
 [deploy]
-# Start the Next.js production server.
 startCommand = "npm run start"
 healthcheckPath = "/"
 healthcheckTimeout = 100
