--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,4 +1,4 @@
-$schema = "https://railway.com/railway.schema.json"
+"$schema" = "https://railway.com/railway.schema.json"
 
 [build]
 builder = "NIXPACKS"
@@ -9,7 +9,7 @@ poetry install --no-root
 """
 
 [deploy]
-startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
+startCommand = "/bin/sh -c \"poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT\""
 healthcheckPath = "/api/directions"
 healthcheckTimeout = 300
 restartPolicyType = "ALWAYS"
