--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start"
+        "start": "next start -p $PORT"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.6",
