--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,6 +2,7 @@
 
 [build]
 builder = "NIXPACKS"
+rootDirectory = "backend"
 buildCommand = """
 curl -sSL https://install.python-poetry.org | python3 - && \
 export PATH="$HOME/.local/bin:$PATH" && \
@@ -9,7 +10,7 @@ poetry install --no-root
 """
 
 [deploy]
-startCommand = "/bin/sh -c \"poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT\""
+startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/directions"
 healthcheckTimeout = 300
 restartPolicyType = "ALWAYS"
