--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,11 +2,11 @@
 name = "hopperhacks25"
 version = "0.1.0"
 description = "Map for disabled people at stony that takes into account elevation + disability accesible routes"
-authors = ["tarunvaid05 tarunvaid05@gmail.com"]
+authors = ["tarunvaid05 <tarunvaid05@gmail.com>"]
 readme = "README.md"
-python = ">=3.13"
 
 [tool.poetry.dependencies]
+python = ">=3.13"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 googlemaps = "^4.10.0"
