--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["tarunvaid05 <tarunvaid05@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = "^3.12.7"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 googlemaps = "^4.10.0"
