--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,20 +4,14 @@
 builder = "NIXPACKS"
 rootDirectory = "backend"
 
-# Override default setup phase
+# Override default setup phase 
 nixpacksPlan = { 
   phases = { 
     setup = { cmds = ["echo Skipping default venv setup"] } 
   } 
 }
 
-buildCommand = """
-curl -sSL https://install.python-poetry.org | python3 - && \
-export PATH="$HOME/.local/bin:$PATH" && \
-pip install --upgrade pip && \
-pip install poetry==1.3.1 && \
-poetry install --no-root --no-interaction --no-ansi
-"""
+buildCommand = "curl -sSL https://install.python-poetry.org | python3 - && export PATH=\"$HOME/.local/bin:$PATH\" && pip install poetry==1.3.1 && poetry install --no-dev --no-interaction --no-ansi"
 
 [deploy]
 startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
