--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -11,7 +11,14 @@ nixpacksPlan = {
   } 
 }
 
-buildCommand = "curl -sSL https://install.python-poetry.org | python3 - && export PATH=\"$HOME/.local/bin:$PATH\" && pip install poetry==1.3.1 && poetry install --no-dev --no-interaction --no-ansi"
+# Remove explicit venv creation; let Poetry handle its own environment.
+buildCommand = """
+curl -sSL https://install.python-poetry.org | python3 - && \
+export PATH="$HOME/.local/bin:$PATH" && \
+pip install --upgrade pip && \
+pip install poetry==1.3.1 && \
+poetry install --no-root --no-dev --no-interaction --no-ansi
+"""
 
 [deploy]
 startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
