--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,19 +3,19 @@
 [build]
 builder = "NIXPACKS"
 rootDirectory = "backend"
+buildCommand = ""
 
-# Completely override default build phases
-nixpacksPlan = { 
-  phases = { 
-    setup = { cmds = [] }, 
+nixpacksPlan = {
+  phases = {
+    setup = { cmds = ["echo Skipping default venv setup"] },
     install = { cmds = [
       "curl -sSL https://install.python-poetry.org | python3 -",
       "export PATH=\"$HOME/.local/bin:$PATH\"",
-      "pip install --upgrade pip",
-      "pip install poetry==1.3.1",
-      "poetry install --no-root --no-dev --no-interaction --no-ansi"
+      "python -m pip install --upgrade pip",
+      "python -m pip install poetry==1.3.1",
+      "poetry install --no-root --only main --no-interaction --no-ansi"
     ] }
-  } 
+  }
 }
 
 [deploy]
