--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,20 +3,24 @@
 [build]
 builder = "NIXPACKS"
 rootDirectory = "backend"
-buildCommand = ""
 
-nixpacksPlan = {
-  phases = {
-    setup = { cmds = ["echo Skipping default venv setup"] },
-    install = { cmds = [
-      "curl -sSL https://install.python-poetry.org | python3 -",
-      "export PATH=\"$HOME/.local/bin:$PATH\"",
-      "python -m pip install --upgrade pip",
-      "python -m pip install poetry==1.3.1",
-      "poetry install --no-root --only main --no-interaction --no-ansi"
-    ] }
-  }
+package-mode = false
+
+# Override default setup phase 
+nixpacksPlan = { 
+  phases = { 
+    setup = { cmds = ["echo Skipping default venv setup"] } 
+  } 
 }
+
+# Remove explicit venv creation; let Poetry handle its own environment.
+buildCommand = """
+curl -sSL https://install.python-poetry.org | python3 - && \
+export PATH="$HOME/.local/bin:$PATH" && \
+pip install --upgrade pip && \
+pip install poetry==1.3.1 && \
+poetry install --no-root --no-dev --no-interaction --no-ansi
+"""
 
 [deploy]
 startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
