--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,26 +4,19 @@
 builder = "NIXPACKS"
 rootDirectory = "backend"
 
-package-mode = false
-
-# Override default setup phase 
-nixpacksPlan = { 
-  phases = { 
-    setup = { cmds = ["echo Skipping default venv setup"] } 
-  } 
+nixpacksPlan = {
+  phases = {
+    install = {
+      cmds = [
+        "pip install --upgrade pip",
+        "pip install -r requirements.txt"
+      ]
+    }
+  }
 }
 
-# Remove explicit venv creation; let Poetry handle its own environment.
-buildCommand = """
-curl -sSL https://install.python-poetry.org | python3 - && \
-export PATH="$HOME/.local/bin:$PATH" && \
-pip install --upgrade pip && \
-pip install poetry==1.3.1 && \
-poetry install --no-root --no-dev --no-interaction --no-ansi
-"""
-
 [deploy]
-startCommand = "poetry run uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/directions"
 healthcheckTimeout = 300
 restartPolicyType = "ALWAYS"
