--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -8,8 +8,8 @@ nixpacksPlan = {
   phases = {
     install = {
       cmds = [
-        "pip install --upgrade pip",
-        "pip install -r requirements.txt"
+        "pip3 install --upgrade pip",
+        "pip3 install -r requirements.txt"
       ]
     }
   }
