railway.toml please...

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -5,7 +5,18 @@ builder = "NIXPACKS"
 rootDirectory = "backend"
 
 [build.env]
-NIXPACKS_PKGS = "python310Full"
+nixpacksPlan = { 
+  phases = { 
+    setup = {
+      # setup runs before install in Nixpacks
+      cmds = ["python -m ensurepip --upgrade"]
+    },
+    install = {
+      cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
+    }
+  },
+  providers = ["python"]
+}
 
 [deploy]
 startCommand = "uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
