--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -5,6 +5,7 @@ builder = "NIXPACKS"
 rootDirectory = "backend"
 
 [build.env]
+NIXPACKS_PKGS = "python310Full"
 nixpacksPlan = { 
   phases = { 
     setup = {
