--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,41 @@
-annotated-types==0.7.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-anyio==4.8.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-branca==0.8.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-certifi==2025.1.31 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-charset-normalizer==3.4.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-click==8.1.8 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-colorama==0.4.6 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0" and platform_system == "Windows"
-fastapi==0.115.8 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-folium==0.19.4 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-geographiclib==2.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-geopy==2.4.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-gmplot==1.4.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-googlemaps==4.10.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-h11==0.14.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-idna==3.10 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-jinja2==3.1.5 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-joblib==1.4.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-markupsafe==3.0.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-networkx==3.4.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-numpy==2.2.3 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-pandas==2.2.3 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-polyline==2.0.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-pydantic-core==2.27.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-pydantic==2.10.6 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-pygeodesic==0.1.11 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-python-dateutil==2.9.0.post0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-python-dotenv==1.0.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-pytz==2025.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-requests==2.32.3 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-scikit-learn==1.6.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-scipy==1.15.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-shapely==2.0.7 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-six==1.17.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-sniffio==1.3.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-starlette==0.45.3 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-threadpoolctl==3.5.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-typing-extensions==4.12.2 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-tzdata==2025.1 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-urllib3==2.3.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-uvicorn==0.34.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
-xyzservices==2025.1.0 ; python_full_version >= "3.12.7" and python_full_version < "4.0.0"
+annotated-types==0.7.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+anyio==4.8.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+branca==0.8.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+certifi==2025.1.31 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+charset-normalizer==3.4.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+click==8.1.8 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+colorama==0.4.6 ; python_full_version == "3.12.7" and python_full_version < "4.0.0" and platform_system == "Windows"
+fastapi==0.115.8 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+folium==0.19.4 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+geographiclib==2.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+geopy==2.4.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+gmplot==1.4.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+googlemaps==4.10.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+h11==0.14.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+idna==3.10 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+jinja2==3.1.5 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+joblib==1.4.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+markupsafe==3.0.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+networkx==3.4.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+numpy==2.2.3 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+pandas==2.2.3 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+polyline==2.0.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+pydantic-core==2.27.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+pydantic==2.10.6 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+pygeodesic==0.1.11 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+python-dateutil==2.9.0.post0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+python-dotenv==1.0.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+pytz==2025.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+requests==2.32.3 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+scikit-learn==1.6.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+scipy==1.15.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+shapely==2.0.7 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+six==1.17.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+sniffio==1.3.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+starlette==0.45.3 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+threadpoolctl==3.5.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+typing-extensions==4.12.2 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+tzdata==2025.1 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+urllib3==2.3.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+uvicorn==0.34.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
+xyzservices==2025.1.0 ; python_full_version == "3.12.7" and python_full_version < "4.0.0"
