--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["python3127", "pip"]
 
 [phases.build]
-cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
+cmds = ["pip install --upgrade pip"]
 
 [start]
 cmd = "uvicorn routingBeta:app --host 0.0.0.0 --port $PORT"
